# docs/swagger.json
@@ -33,7 +33,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/user.User"
+                            "$ref": "#/definitions/user.CreateUserRq"
                         }
                     }
                 ],
@@ -113,6 +113,25 @@
         }
     },
     "definitions": {
+        "user.CreateUserRq": {
+            "type": "object",
+            "required": [
+                "email",
+                "name"
+            ],
+            "properties": {
+                "email": {
+                    "description": "使用者 Email",
+                    "type": "string",
+                    "example": "leo@example.com"
+                },
+                "name": {
+                    "description": "使用者名稱",
+                    "type": "string",
+                    "example": "Leo"
+                }
+            }
+        },
         "user.User": {
             "type": "object",
             "required": [
